add: buttons max and min for numbers inputs

--- a/surveyForm/index.html
+++ b/surveyForm/index.html
@@ -56,6 +56,8 @@
                                         <label id="number-label" for="number">Number</label>
                                         <input type="number" id="number" name="form-number" min="10" max="100"
                                             placeholder="Number" required>
+                                        <div class="button min">-</div>
+                                        <div class="button max">+</div>
                                     </div>
                                 </div>
                             </div>
@@ -123,18 +125,18 @@
                                         <legend>Some other question here?</legend>
 
                                         <label class="checkbox-container" for="checkbox-1"><span>Form div 1</span>
-                                            <input type="checkbox" tabindex="0" value="1" name="form-checkboxs" id="checkbox-1"
-                                                checked>
+                                            <input type="checkbox" tabindex="0" value="1" name="form-checkboxs"
+                                                id="checkbox-1">
                                             <div class="checkmark"></div>
                                         </label>
                                         <label class="checkbox-container" for="checkbox-2"><span>Form div 2</span>
-                                            <input type="checkbox" tabindex="0" value="2" name="form-checkboxs" id="checkbox-2"
-                                                checked>
+                                            <input type="checkbox" tabindex="0" value="2" name="form-checkboxs"
+                                                id="checkbox-2">
                                             <div class="checkmark"></div>
                                         </label>
                                         <label class="checkbox-container" for="checkbox-3"><span>Form div 3</span>
-                                            <input type="checkbox" tabindex="0" value="3" name="form-checkboxs" id="checkbox-3"
-                                                checked>
+                                            <input type="checkbox" tabindex="0" value="3" name="form-checkboxs"
+                                                id="checkbox-3" checked>
                                             <div class="checkmark"></div>
                                         </label>
 
@@ -162,7 +164,7 @@
                         <fieldset>
                             <legend class="sr-only">Controls to select form's parts</legend>
                             <label class="radio-label" for="control-1"><span class="sr-only">Form div 1</span>
-                                <input type="radio" tabindex="0" value="1" name="form-controls" id="control-1" >
+                                <input type="radio" tabindex="0" value="1" name="form-controls" id="control-1" checked>
                                 <div class="symbol"></div>
                             </label>
                             <label class="radio-label" for="control-2"><span class="sr-only">Form div 2</span>
@@ -170,11 +172,11 @@
                                 <div class="symbol error"></div>
                             </label>
                             <label class="radio-label" for="control-3"><span class="sr-only">Form div 3</span>
-                                <input type="radio" tabindex="0" value="3" name="form-controls" id="control-3" checked>
+                                <input type="radio" tabindex="0" value="3" name="form-controls" id="control-3" >
                                 <div class="symbol"></div>
                             </label>
                             <label class="radio-label" for="control-4"><span class="sr-only">Form div 4</span>
-                                <input type="radio" tabindex="0" value="4" name="form-controls" id="control-4" >
+                                <input type="radio" tabindex="0" value="4" name="form-controls" id="control-4">
                                 <div class="symbol"></div>
                             </label>
                             <label class="radio-label" for="control-5"><span class="sr-only">Form div 5</span>
