add: final configurations uploaded to codepen

--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="./styles/index/index.css">
     <link rel="stylesheet" href="./styles/index/materialdesignicons.min.css">
 
-    <script src="./js/index.js" type="module"></script>
+    <script src="./src/index.js" type="module"></script>
 </head>
 
 <body class="main">
+
     <ul class="sr-only">
         <li><a href="#nav-bar">Skip to navigation</a></li>
         <li><a href="#main">Skip to main content</a></li>
@@ -46,8 +47,8 @@
             <div class="background"></div>
         </div>
 
-        <div id="logo" class="logo"><a href="/" title="Go to main page"><img id="header-img" src="./img/logo.svg"
-                    alt="Logo of the site"></a>
+        <div id="logo" class="logo"><a href="/" title="Go to main page"><img id="header-img"
+                    src="https://svgshare.com/i/DV4.svg" alt="Logo of the site"></a>
         </div>
 
 
@@ -94,7 +95,8 @@
                     <p>Lorem ipsum dolor sit, laudantium, quisquam voluptas aperiam possimus tenetur, hic eaque unde
                         illum est dolores placeat consequuntur corrupti. Voluptatum, fugit sunt!</p>
                 </div>
-                <div class="little-box-image"><img src="./img/rosa (1).jpg" alt=""></div>
+                <div class="little-box-image"><img src="https://live.staticflickr.com/65535/48016231837_24a37bd01d.jpg"
+                        alt=""></div>
             </div>
 
 
@@ -104,7 +106,8 @@
                     <p>Amet dolores fugiat quo. Laudantium, quisquam voluptas aperiam possimus tenetur, hic eaque unde
                         illum est dolores placeat consequuntur corrupti.</p>
                 </div>
-                <div class="little-box-image"><img src="./img/rosa (2).jpg" alt=""></div>
+                <div class="little-box-image"><img src="https://live.staticflickr.com/65535/48016144831_b53b181f47.jpg"
+                        alt=""></div>
             </div>
 
 
@@ -114,7 +117,8 @@
                     <p>Amet dolores fugiat quo. Laudantium, quisquam voluptas aperiam possimus tenetur, hic eaque unde
                         illum est dolores placeat consequuntur corrupti.</p>
                 </div>
-                <div class="little-box-image"><img src="./img/rosa (6).jpg" alt=""></div>
+                <div class="little-box-image"><img src="https://live.staticflickr.com/65535/48016144776_7f13b52ebf.jpg"
+                        alt=""></div>
             </div>
 
 
@@ -124,7 +128,8 @@
                     <p>Amet dolores fugiat quo. Laudantium, quisquam voluptas aperiam possimus tenetur, hic eaque unde
                         illum est dolores placeat consequuntur corrupti.</p>
                 </div>
-                <div class="little-box-image"><img src="./img/rosa (4).jpg" alt=""></div>
+                <div class="little-box-image"><img
+                        src="https://live.staticflickr.com/65535/48016231887_e285ff7b52_m.jpg" alt=""></div>
             </div>
 
         </section>
@@ -133,7 +138,7 @@
 
 
             <div class="row xs-align-center xs-justify-center">
-                <div tabindex="0" class="box primary pa4 col-xs12 col-md6">
+                <div tabindex="0" class="box primary pa4 col-xs12 col-md6 mb4">
                     <header>
                         <h1>autem harum doloribus id quis voluptate</h1>
                     </header>
@@ -143,7 +148,7 @@
                         </video>
                     </div>
                     <footer class="x-footer my4">
-                        <div class="x-actions xs-justify-center"><button class="button">Conferir</button>
+                        <div class="x-actions xs-justify-center"><button class="button">Watch in YouTube</button>
                         </div>
                     </footer>
                 </div>
@@ -158,7 +163,8 @@
 
                 <div tabindex="0" class="box icon-box pa4">
                     <header>
-                        <figure><img src="./img/cover_when_we_all_fall_asleep_where_do_we_go.png" alt=""></figure>
+                        <figure><img src="https://live.staticflickr.com/65535/48016231837_24a37bd01d.jpg" alt="">
+                        </figure>
                         <h2 class="mt4">When We All Fall Asleep, Where Do We Go?</h2>
                     </header>
                     <div class="x-content">
@@ -171,13 +177,14 @@
                         </ul>
                     </div>
                     <footer class="x-footer">
-                        <div class="x-actions row xs-justify-end"><button class="button">Conferir</button>
+                        <div class="x-actions row xs-justify-end"><button class="button">Buy this</button>
                         </div>
                     </footer>
                 </div>
                 <div tabindex="0" class="box icon-box pa4">
                     <header>
-                        <figure><img src="./img/cover_dont_smile_at_me.jpg" alt=""></figure>
+                        <figure><img src="https://live.staticflickr.com/65535/48016144831_b53b181f47.jpg" alt="">
+                        </figure>
                         <h2 class="mt4">Don't Smile at Me</h2>
                     </header>
                     <div class="x-content">
@@ -190,13 +197,14 @@
                         </ul>
                     </div>
                     <footer class="x-footer">
-                        <div class="x-actions row xs-justify-end"><button class="button">Conferir</button>
+                        <div class="x-actions row xs-justify-end"><button class="button">Buy this</button>
                         </div>
                     </footer>
                 </div>
                 <div tabindex="0" class="box icon-box pa4">
                     <header>
-                        <figure><img src="./img/cover_lovely.jpg" alt=""></figure>
+                        <figure><img src="https://live.staticflickr.com/65535/48016144776_7f13b52ebf.jpg" alt="">
+                        </figure>
                         <h2 class="mt4">Lovely (with Khalid)</h2>
                     </header>
                     <div class="x-content">
@@ -209,13 +217,14 @@
                         </ul>
                     </div>
                     <footer class="x-footer">
-                        <div class="x-actions row xs-justify-end"><button class="button">Conferir</button>
+                        <div class="x-actions row xs-justify-end"><button class="button">Buy this</button>
                         </div>
                     </footer>
                 </div>
                 <div tabindex="0" class="box icon-box pa4">
                     <header>
-                        <figure><img src="./img/cover_ocean_eyes.png" alt=""></figure>
+                        <figure><img src="https://live.staticflickr.com/65535/48016231887_e285ff7b52_m.jpg" alt="">
+                        </figure>
                         <h2 class="mt4">Ocean Eyes</h2>
                     </header>
                     <div class="x-content">
@@ -228,7 +237,7 @@
                         </ul>
                     </div>
                     <footer class="x-footer">
-                        <div class="x-actions row xs-justify-end"><button class="button">Conferir</button>
+                        <div class="x-actions row xs-justify-end"><button class="button">Buy this</button>
                         </div>
                     </footer>
                 </div>
@@ -244,12 +253,12 @@
                             <legend class="mb4"> Contact us</legend>
 
                             <div class="input mb4">
-                                <label for="subject">Subject from mine muti</label>
+                                <label for="subject">Subject</label>
                                 <input class="color-inverted" type="text" id="subject" name="subject" maxlength="65"
                                     required aria-required="true">
                             </div>
                             <div class="input mb4">
-                                <label for="email">Seu email</label>
+                                <label for="email">Your email</label>
                                 <input class="color-inverted" type="email" id="email" name="email" maxlength="65"
                                     required aria-required="true">
                             </div>
@@ -275,14 +284,14 @@
     <footer id="footer" class="row main color-inverted">
         <div class="col-xs12 col-sm6 col-md4 pa4">
             <div class="col-xs12 xs-text-center">
-                <img class="logo" src="./img/logo.svg" alt="Logo of the site">
+                <img class="logo" src="https://svgshare.com/i/DV4.svg" alt="Logo of the site">
             </div>
             <div class="xs-text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, aperiam
                 vero atque dolorum eveniet
                 tempora error, optio ipsam reprehenderit commodi nemo praesentium, quasi quo. Pariatur vitae repellat et
                 a
                 expedita.</div>
-            
+
 
         </div>
         <div class="col-xs12 col-sm6 col-md4 pa4">
