--- a/surveyForm/index.html
+++ b/surveyForm/index.html
@@ -11,31 +11,67 @@
     <link rel="stylesheet" href="./styles/index/reset.css">
     <link rel="stylesheet" href="./styles/index/index.css">
 
-    <script src="./js/index.js" type="module"></script>
+    <script src="./dist/main.js"></script>
 </head>
 
-<body class="main">
+<body class="accent">
     <ul class="sr-only">
-        <li><a href="#nav-bar">Skip to navigation</a></li>
         <li><a href="#main">Skip to main content</a></li>
     </ul>
 
-    <header id="header">
-
-    </header>
-
     <main id="main">
-        <h1 id="title">Consequuntur mollitia reprehenderit architecto consequatur dolorem et, labore ducimus obcaecati
-            alias officia quo.</h1>
-        <p id="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam saepe ipsum ipsa maiores
-            cupiditate cumque odio nesciunt quidem! Perferendis quasi architecto maiores saepe molestiae aperiam cum.
-            Quia quod quas accusamus?</p>
+        <section class="row mt16">
 
-        <section class="row">
-            <div class="col-xs12 offset-md6 col-md6 pa4">
+            <div class="col-xs10 offset-xs1 col-md4 offset-md1">
+                <h1 id="title">Consequuntur mollitia reprehenderit architecto consequatur dolorem et, labore ducimus
+                    obcaecati
+                    alias officia quo.</h1>
+                <p id="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam saepe ipsum ipsa
+                    maiores
+                    cupiditate cumque odio nesciunt quidem! Perferendis quasi architecto maiores saepe molestiae aperiam
+                    cum.
+                    Quia quod quas accusamus?</p>
+            </div>
+
+            <div class="col-xs10 offset-xs1 col-md4 offset-md1">
                 <!-- <div class="col-xs12 pa4"> -->
                 <div class="custom-form">
-                    <form action="" id="survey-form" class="primary color-inverted">
+                                        <div class="controls accent color-inverted">
+                                            <fieldset>
+                                                <legend class="sr-only">Controls to select form's parts</legend>
+                                                <label class="radio-label" for="control-1"><span class="sr-only">Form
+                                                        div 1</span>
+                                                    <input type="radio" tabindex="0" value="1" name="form-controls"
+                                                        id="control-1" checked>
+                                                    <div class="symbol"></div>
+                                                </label>
+                                                <label class="radio-label" for="control-2"><span class="sr-only">Form
+                                                        div 2</span>
+                                                    <input type="radio" tabindex="0" value="2" name="form-controls"
+                                                        id="control-2">
+                                                    <div class="symbol"></div>
+                                                </label>
+                                                <label class="radio-label" for="control-3"><span class="sr-only">Form
+                                                        div 3</span>
+                                                    <input type="radio" tabindex="0" value="3" name="form-controls"
+                                                        id="control-3">
+                                                    <div class="symbol"></div>
+                                                </label>
+                                                <label class="radio-label" for="control-4"><span class="sr-only">Form
+                                                        div 4</span>
+                                                    <input type="radio" tabindex="0" value="4" name="form-controls"
+                                                        id="control-4">
+                                                    <div class="symbol"></div>
+                                                </label>
+                                                <label class="radio-label" for="control-5"><span class="sr-only">Form
+                                                        div 5</span>
+                                                    <input type="radio" tabindex="0" value="5" name="form-controls"
+                                                        id="control-5">
+                                                    <div class="symbol"></div>
+                                                </label>
+                                            </fieldset>
+                                        </div>
+                    <form action="" method="POST" id="survey-form" class="main color-inverted">
                         <fieldset>
                             <legend>The survey form's title</legend>
 
@@ -50,7 +86,8 @@
                                                 <input class="input-item" type="text" id="name" name="form-name"
                                                     placeholder="Your name here" required>
                                                 <div class="input-action">
-                                                    <div class="button clear"><i class="mdi mdi-close"></i></div>
+                                                    <div role="button" tabindex="0" aria-label="Clear the input"
+                                                        class="button clear"><i class="mdi mdi-close"></i></div>
                                                 </div>
                                             </div>
                                             <div class="input-message">Lorem ipsum dolor sit, amet consectetur
@@ -63,7 +100,8 @@
                                                 <input class="input-item" type="email" id="email" name="form-email"
                                                     placeholder="E-mail" required>
                                                 <div class="input-action">
-                                                    <div class="button clear"><i class="mdi mdi-close"></i></div>
+                                                    <div role="button" tabindex="0" aria-label="Clear the input"
+                                                        class="button clear"><i class="mdi mdi-close"></i></div>
                                                 </div>
                                             </div>
                                             <div class="input-message">Lorem ipsum dolor sit, amet consectetur
@@ -76,14 +114,20 @@
                                                 <input class="input-item" type="number" id="number" name="form-number"
                                                     min="10" max="100" placeholder="Number" required>
                                                 <div class="input-action input-menu">
-                                                    <div class="button menu">
+                                                    <div role="button" tabindex="0" aria-label="Input options"
+                                                        class="button menu">
                                                         <i class="mdi mdi-dots-vertical"></i>
                                                     </div>
                                                 </div>
                                                 <div class="input-options">
-                                                    <div class="button min"><i class="mdi mdi-minus"></i></div>
-                                                    <div class="button max"><i class="mdi mdi-plus"></i></div>
-                                                    <div class="button clear"><i class="mdi mdi-close"></i></div>
+                                                    <div role="button" tabindex="0"
+                                                        aria-label="Fill with minimum number" class="button min"><i
+                                                            class="mdi mdi-minus"></i></div>
+                                                    <div role="button" tabindex="0"
+                                                        aria-label="Fill with maximum number" class="button max"><i
+                                                            class="mdi mdi-plus"></i></div>
+                                                    <div role="button" tabindex="0" aria-label="Clear the input"
+                                                        class="button clear"><i class="mdi mdi-close"></i></div>
                                                 </div>
                                             </div>
                                             <div class="input-message">Lorem ipsum dolor sit, amet consectetur
@@ -130,17 +174,17 @@
 
                                             <label class="radio-container" for="radio-1"><span>Form div 1</span>
                                                 <input type="radio" tabindex="0" value="1" name="form-radios"
-                                                    id="radio-1" checked>
+                                                    id="radio-1">
                                                 <div class="checkmark"></div>
                                             </label>
                                             <label class="radio-container" for="radio-2"><span>Form div 2</span>
                                                 <input type="radio" tabindex="0" value="2" name="form-radios"
-                                                    id="radio-2" checked>
+                                                    id="radio-2">
                                                 <div class="checkmark"></div>
                                             </label>
                                             <label class="radio-container" for="radio-3"><span>Form div 3</span>
                                                 <input type="radio" tabindex="0" value="3" name="form-radios"
-                                                    id="radio-3" checked>
+                                                    id="radio-3">
                                                 <div class="checkmark"></div>
                                             </label>
 
@@ -167,7 +211,7 @@
                                             </label>
                                             <label class="checkbox-container" for="checkbox-3"><span>Form div 3</span>
                                                 <input type="checkbox" tabindex="0" value="3" name="form-checkboxs"
-                                                    id="checkbox-3" checked>
+                                                    id="checkbox-3">
                                                 <div class="checkmark"></div>
                                             </label>
 
@@ -190,11 +234,6 @@
                                         </div>
                                         <div class="form-actions">
                                             <input type="submit" value="Send" name="form-submit" id="submit">
-                                            <div class="input-button mt4">
-                                                <input type="submit" class="button" id="submit-newsletter"
-                                                    name="submit-newsletter" value="Registry" aria-valuetext="Registry"
-                                                    required>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -203,42 +242,11 @@
 
                     </form>
 
-                    <div class="controls accent color-inverted">
-                        <fieldset>
-                            <legend class="sr-only">Controls to select form's parts</legend>
-                            <label class="radio-label" for="control-1"><span class="sr-only">Form div 1</span>
-                                <input type="radio" tabindex="0" value="1" name="form-controls" id="control-1" checked>
-                                <div class="symbol"></div>
-                            </label>
-                            <label class="radio-label" for="control-2"><span class="sr-only">Form div 2</span>
-                                <input type="radio" tabindex="0" value="2" name="form-controls" id="control-2">
-                                <div class="symbol error"></div>
-                            </label>
-                            <label class="radio-label" for="control-3"><span class="sr-only">Form div 3</span>
-                                <input type="radio" tabindex="0" value="3" name="form-controls" id="control-3">
-                                <div class="symbol"></div>
-                            </label>
-                            <label class="radio-label" for="control-4"><span class="sr-only">Form div 4</span>
-                                <input type="radio" tabindex="0" value="4" name="form-controls" id="control-4">
-                                <div class="symbol"></div>
-                            </label>
-                            <label class="radio-label" for="control-5"><span class="sr-only">Form div 5</span>
-                                <input type="radio" tabindex="0" value="5" name="form-controls" id="control-5">
-                                <div class="symbol"></div>
-                            </label>
-                        </fieldset>
-                    </div>
                 </div>
             </div>
         </section>
 
     </main>
-    <!-- 
-    <footer id="footer" class="row main color-inverted">
-        <div class="col-xs12 xs-text-center pa4">&copy; Ítalo Polazzi - 2019</div>
-    </footer> -->
-
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
 
 </html>
