--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -9,8 +9,7 @@
     <title>Ítalo Polazzi - Web Developer</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.2.4/custom-elements.min.js.map"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.2.4/custom-elements.min.js"></script>
 </head>
@@ -309,7 +308,7 @@
                     <!-- <div></div> -->
                 </div>
 
-                <div class="col-xs12 col-md6">
+                <div class="col-xs12 col-md6 dark">
 
                     <form class="color-inverted main pa8" id="contact" name="contact" action="">
 
@@ -330,6 +329,9 @@
                                 <label for="content">Content</label>
                                 <textarea class="main color-inverted" role="text" id="content" name="content"
                                     maxlength="500" required aria-required="true"></textarea>
+                            </div>
+                            <div class="input mb8">
+                                <input type="submit" value="Send">
                             </div>
                         </fieldset>
 
@@ -355,10 +357,10 @@
                     amet aut velit.</p>
             </div>
             <div class="xs-text-align-justify col-xs12 col-sm6 col-md5 pa8">
-                <!-- <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
+                <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
                     data-type="horizontal" data-theme="dark" data-vanity="itpzzi"><a class="LI-simple-link"
                         href='https://br.linkedin.com/in/itpzzi?trk=profile-badge'>Ítalo Polazzi Ferreira</a></div>
-                        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
+                        <!-- <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
                             data-type="vertical" data-theme="dark" data-vanity="itpzzi"><a class="LI-simple-link"
                                 href='https://br.linkedin.com/in/itpzzi?trk=profile-badge'>Ítalo Polazzi Ferreira</a>
                         </div> -->
@@ -369,7 +371,8 @@
         </div>
     </footer>
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-    <script src="js/index.js" type="module"></script>
+    <!-- <script src="js/index.js" type="module"></script> -->
+    <script src="dist/main.js" type="module"></script>
     
     <!-- <script src="https://cdn.freecodecamp.org/<i class="mdi mdi-read">able-projects-fcc/v1/bundle.js"></script> --></i>
 </body>
